# Lumina

./: meson.build
buildconfig/: linux-x86_64-clang.ini
include/lumina/vector/: vector2.hpp  vector3.hpp  vector4.hpp
src/vector/: vector2.cpp  vector3.cpp  vector4.cpp
